fix: align testimonials

--- a/index.mobile.css
+++ b/index.mobile.css
@@ -1,6 +1,7 @@
 /** Make index.html responsive for mobile devices and tablets*/
 @media screen and (max-width: 767px) {
-    /* make the background cover the vewport */
+    /* make the background cover the viewport */
+    /* change the position of the last image in the background to show fullsized */
     .overlay-bg {
         background: linear-gradient(105.82deg, rgba(1, 56, 61, 1) 0%, rgba(1, 56, 61, 0) 100.56%),url("./sourire.jpg");
         background-size: cover;
@@ -8,6 +9,7 @@
         background-repeat: no-repeat;
         height: 100vh;
         width: 100%;
+
     }
     /* move the logo to the left and centered vertically*/
     /* add space inside the box */
@@ -79,11 +81,9 @@
     width: 100%;
     padding: 0;
   }
+  /** switch the order of items in this grid */
   .row-container {
     padding: 0px;
-  }
-  /** switch the order of items in this grid */
-  .row-container, .row-container-3 {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
@@ -106,11 +106,28 @@
     padding: 10px 20px 20px 10px;
   }
   .testimonials {
+    background-color: white;
     padding: 10px 20px 20px 10px;
   }
+  .testimonials h2 {
+    text-align: center;
+  }
+  
+  /** use named grid areas to position the items */
   .testimonials-odd {
-    display: flex;
-    flex-direction: column-reverse;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "img"
+      "text";
+  }
+
+  #profile-one, #profile-three {
+    grid-area: img;
+  }
+
+  #testimonial-one, #testimonial-three {
+    grid-area: text;
   }
   .faq-content {
     padding: 10px;
